cmake_minimum_required(VERSION 3.23)
project(cpp_tuts)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(data_types data_types.cpp)
add_executable(limits limits.cpp)
add_executable(arrays_vectors arrays_vectors.cpp)
add_executable(char_value_checking char_value_checking.cpp)
add_executable(cmath_functions cmath_functions.cpp)
add_executable(loops loops.cpp)
add_executable(seeding_random seeding_random.cpp)
add_executable(strings strings.cpp)
add_executable(stringstreams stringstreams.cpp)
add_executable(functions functions.cpp)
add_executable(flags flags.cpp)
add_executable(pointers pointers.cpp)
add_executable(conditions conditions.cpp)
add_executable(exception_handling exception_handling.cpp)
add_executable(oops oops/oops.cpp oops/Shape.cpp oops/Shape.h oops/Circle.cpp oops/Circle.h)
add_executable(structs oops/structs.cpp)
add_executable(operator_overloading oops/operator_overloading.cpp)
add_executable(lambda lambda.cpp)
add_executable(fileio fileio.cpp)
add_executable(macros macros.cpp)
add_executable(templates templates.cpp)
add_executable(containers containers.cpp)
add_executable(threads threads.cpp)
add_executable(regex regex.cpp)